--- a/general/reserved_names.html
+++ b/general/reserved_names.html
@@ -60,44 +60,15 @@
 <p>為了維持 CodeIgniter 自身的運作正常，所以使用了些函數和命名。 因此，某些名稱無法供開發者使用。 底下列的是不能使用的保留字。</p>
 <h3>控制器名稱(Controller names)</h3>
 <p>
-由於你的控制器類別可以擴充 application 控制器，你必須要格外小心的替你的函數命名，好讓你的類別可以正確的呼叫使用，否則會發生你的 local 函數把別的函數被覆蓋掉的情況。底下列了些保留字，可別把你的控制器函數(Controller Function)命名成底下的名稱:</p>
+由於你的控制器類別可以擴充 application 控制器，你必須要格外小心的替你的函數命名，好讓你的類別可以正確的呼叫使用，否則會發生你的 local 函數把別的函數被覆蓋掉的情況。底下列了些保留字，可別把你的控制器名稱 (Controller) 命名成底下的名稱:</p>
 <ul>
 	<li>Controller</li>
 	<li>CI_Base</li>
 	<li>_ci_initialize</li>
-	<li>_ci_scaffolding</li>
+    <li>Default</li>
 	<li>index</li>
 </ul>
-<p><br />
-    如果你使用的是 PHP4 的話，還有些底下所列的額外保留字。</p
-    >
-<ul>
-	<li>CI_Loader</li>
-	<li>config</li>
-	<li>database</li>
-	<li>dbutil</li>
-	<li>dbforge</li>
-	<li>file</li>
-	<li>helper</li>
-	<li>helpers</li>
-	<li>language</li>
-	<li>library</li>
-	<li>model</li>
-	<li>plugin</li>
-	<li>plugins</li>
-	<li>scaffolding</li>
-	<li>script</li>
-	<li>view</li>
-	<li>vars</li>
-	<li>_ci_assign_to_models</li>
-	<li>_ci_autoloader</li>
-	<li>_ci_init_class</li>
-	<li>_ci_init_scaffolding</li>
-	<li>_ci_is_instance</li>
-	<li>_ci_load</li>
-	<li>_ci_load_class</li>
-	<li>_ci_object_to_array</li>
-</ul>
+
 <h3>函數(Functions)</h3>
 <ul>
 	<li>is_really_writable()</li>
