--- a/general/security.html
+++ b/general/security.html
@@ -103,7 +103,7 @@
 
 <li><h2>跨站腳本(XSS)過濾</h2>
 
-<p>CodeIgniter隨附了一個跨站腳本過濾器。這個過濾器會檢視一些在你資料中嵌入惡意Javascript的常見技術，還有企圖盜取cookie或是進行其他惡意行為的各種程式碼。跨站腳本(XSS)過濾器在 <a href="../libraries/input.html">這裡</a> 有一些說明。</p>
+<p>CodeIgniter隨附了一個跨站腳本過濾器。這個過濾器會檢視一些在你資料中嵌入惡意Javascript的常見技術，還有企圖盜取cookie或是進行其他惡意行為的各種程式碼。跨站腳本(XSS)過濾器在 <a href="../libraries/security.html">這裡</a> 有一些說明。</p>
 </li>
 
 <li><h2>資料驗證</h2>
