--- a/general/controllers.html
+++ b/general/controllers.html
@@ -224,7 +224,7 @@ class Products extends CI_Controller {<br />
 <p class="important"><strong>非常重要:</strong>&nbsp; 如果你的控制器裡頭有個 <kbd>_remap()</kbd> 函數的話，那麼它會 <strong>總是</strong>
 不理會你的 URI 內容是什麼東西。也就是說，這個方式會改寫掉原本函數呼叫的規則，並且允許使用你自己定義的函數路由規則(function routing rules)。</p>
 
-<p>改寫函數呼叫(通常是在URI的第二個分段)將會被當成是參數通過<kbd>_remap()</kbd>函數:</p>
+<p>改寫函數(通常是在URI的第二個區段)將會被當成是參數傳入<kbd>_remap()</kbd>函數:</p>
 
 <code>function _remap(<var>$method</var>)<br />
 {<br />
@@ -238,17 +238,17 @@ class Products extends CI_Controller {<br />
 &nbsp;&nbsp;&nbsp;&nbsp;}<br />
 }</code>
 
-<p>Any extra segments after the method name are passed into <kbd>_remap()</kbd> as an optional second parameter. This array can be used in combination with PHP's <a href="http://php.net/call_user_func_array" target="_blank">call_user_func_array</a> to emulate CodeIgniter's default behavior.</p> 
- 
-<code>function _remap($method, $params = array())<br /> 
-&#123;<br /> 
-&nbsp;&nbsp;&nbsp;&nbsp;$method = 'process_'.$method;<br /> 
-&nbsp;&nbsp;&nbsp;&nbsp;if (method_exists($this, $method)<br /> 
-&nbsp;&nbsp;&nbsp;&nbsp;&#123;<br /> 
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;return call_user_func_array(array($this, $method), $params);<br /> 
-&nbsp;&nbsp;&nbsp;&nbsp;&#125;<br /> 
-&nbsp;&nbsp;&nbsp;&nbsp;show_404();<br /> 
-&#125;</code> 
+<p>Any extra segments after the method name are passed into <kbd>_remap()</kbd> as an optional second parameter. This array can be used in combination with PHP's <a href="http://php.net/call_user_func_array">call_user_func_array</a> to emulate CodeIgniter's default behavior.</p>
+
+<code>function _remap($method, $params = array())<br />
+{<br />
+&nbsp;&nbsp;&nbsp;&nbsp;$method = 'process_'.$method;<br />
+&nbsp;&nbsp;&nbsp;&nbsp;if (method_exists($this, $method)<br />
+&nbsp;&nbsp;&nbsp;&nbsp;{<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;return call_user_func_array(array($this, $method), $params);<br />
+&nbsp;&nbsp;&nbsp;&nbsp;}<br />
+&nbsp;&nbsp;&nbsp;&nbsp;show_404();<br />
+}</code>
 
 <a name="output"></a>
 <h2>輸出處理</h2>
