--- a/general/errors.html
+++ b/general/errors.html
@@ -74,13 +74,12 @@
 </p>
 <p><dfn>application/errors/</dfn><kbd>error_general.php</kbd></p>
 
-<h2>show_404('<var>page</var>')</h2>
-<p>這個函數會使用下列的錯誤訊息模板來顯示給予的404錯誤訊息。
-</p>
+<h2>show_404('<var>page</var>' [, '<var>log_error</var>'])</h2>
+<p>這個函數會使用下列的錯誤訊息模板來顯示給予的404錯誤訊息。</p>
 <p><dfn>application/errors/</dfn><kbd>error_404.php</kbd></p>
 
-<p>這個函數預期你傳給它的字串是所找不到的檔案路徑。注意，CodeIgniter會在找不到控制器(controller)時自動顯示404訊息。
-</p>
+<p>這個函數預期你傳給它的字串是所找不到的檔案路徑。注意，CodeIgniter會在找不到控制器(controller)時自動顯示404訊息。</p>
+<p>CodeIgniter automatically logs any show_404() calls. Setting the optional second parameter to FALSE will skip logging.</p>
 
 
 <h2>log_message('<var>level</var>'，'<samp>message</samp>')</h2>
