--- a/general/helpers.html
+++ b/general/helpers.html
@@ -63,7 +63,7 @@
 
 <p>CodeIgniter 預設並不會載入補助函數，所以要使用補助函數時，第一步就是要載入它。一旦載入後，它就可在你的 <a href="../general/controllers.html">控制器(controller)</a> 與 <a href="../general/views.html">檢視(views)</a> 中全域使用。</p>
 
-<p>補助函數一般會放在 <dfn>system/helpers</dfn> 或 <dfn>system/application/helpers </dfn> 目錄中。CodeIgniter 會先從你的 <dfn>system/application/helpers</dfn> 目錄尋找，如果這個目錄不存在或是檔案找不到，它才到全域的 <dfn>system/helpers</dfn> 目錄尋找。</p>
+<p>補助函數一般會放在 <dfn>system/helpers</dfn> 或 <dfn>application/helpers </dfn> 目錄中。CodeIgniter 會先從你的 <dfn>application/helpers</dfn> 目錄尋找，如果這個目錄不存在或是檔案找不到，它才到全域的 <dfn>system/helpers</dfn> 目錄尋找。</p>
 
 
 <h2>載入補助函數</h2>
@@ -164,7 +164,7 @@ function random_element($array)<br />
 &nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="#top">回到頂端</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="../index.html">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
-下個主題:&nbsp;&nbsp;<a href="plugins.html">Plugins</a>
+下個主題:&nbsp;&nbsp;<a href="libraries.html">使用 CodeIgniter 程式庫</a>
 </p>
 <p><a href="http://www.codeigniter.org.tw">CodeIgniter</a> &nbsp;&middot;&nbsp; Copyright &#169; 2006 - 2011 &nbsp;&middot;&nbsp; <a href="http://ellislab.com/">Ellislab, Inc.</a></p>
 </div>
