--- a/general/managing_apps.html
+++ b/general/managing_apps.html
@@ -57,7 +57,7 @@
 
 <h1>管理 Applications</h1>
 
-<p>預設情況是假設你的 CodeIgniter 只打算管理在一個 application，其位在 <dfn>system/application/</dfn> 目錄之下。
+<p>預設情況是假設你的 CodeIgniter 只打算管理在一個 application，其位在 <dfn>application/</dfn> 目錄之下。
 讓多組 application 來共享單一的 CodeIgniter 安裝環境是可行的，也許以更改或是移動 <dfn>application</dfn> 目錄至它處亦可。</p>
 
 <h2>更改 Application 目錄名稱</h2>
@@ -81,20 +81,20 @@
 
 <p>假如你要新增兩個名為"foo"以及"bar"的application。你的 application 的目錄結構應該會像這樣:</p>
 
-<code>system/application/<var>foo</var>/<br />
-system/application/<var>foo</var>/config/<br />
-system/application/<var>foo</var>/controllers/<br />
-system/application/<var>foo</var>/errors/<br />
-system/application/<var>foo</var>/libraries/<br />
-system/application/<var>foo</var>/models/<br />
-system/application/<var>foo</var>/views/<br />
-system/application/<samp>bar</samp>/<br />
-system/application/<samp>bar</samp>/config/<br />
-system/application/<samp>bar</samp>/controllers/<br />
-system/application/<samp>bar</samp>/errors/<br />
-system/application/<samp>bar</samp>/libraries/<br />
-system/application/<samp>bar</samp>/models/<br />
-system/application/<samp>bar</samp>/views/</code>
+<code>application/<var>foo</var>/<br />
+application/<var>foo</var>/config/<br />
+application/<var>foo</var>/controllers/<br />
+application/<var>foo</var>/errors/<br />
+application/<var>foo</var>/libraries/<br />
+application/<var>foo</var>/models/<br />
+application/<var>foo</var>/views/<br />
+application/<samp>bar</samp>/<br />
+application/<samp>bar</samp>/config/<br />
+application/<samp>bar</samp>/controllers/<br />
+application/<samp>bar</samp>/errors/<br />
+application/<samp>bar</samp>/libraries/<br />
+application/<samp>bar</samp>/models/<br />
+application/<samp>bar</samp>/views/</code>
 
 
 <p>只要用某個 application 的話，請編輯 <kbd>index.php</kbd> 檔案然後設定 <dfn>$application_folder</dfn> 變數。
