--- a/general/caching.html
+++ b/general/caching.html
@@ -65,7 +65,7 @@
 
 <h2>快取是如何運作的呢?</h2>
 
-<p>快取可以把單頁為最小單位，你可以設定頁面的保留時間、何時該被從新更新(refresh)。當葉面首次被載入時，快取檔案則會寫 <dfn>system/cache</dfn> 目錄之中。下個頁面則由快取檔案取出，接者把這個頁面傳送給對伺服器送出請求(request)的瀏覽器。假如請求的檔案已經過期(expired)，那麼舊的快取頁面則會被刪除，然後伺服器更新快取後，才會把頁面傳送給瀏覽器。</p>
+<p>快取可以把單頁為最小單位，你可以設定頁面的保留時間、何時該被從新更新(refresh)。當葉面首次被載入時，快取檔案則會寫 <dfn>applocation/cache</dfn> 目錄之中。下個頁面則由快取檔案取出，接者把這個頁面傳送給對伺服器送出請求(request)的瀏覽器。假如請求的檔案已經過期(expired)，那麼舊的快取頁面則會被刪除，然後伺服器更新快取後，才會把頁面傳送給瀏覽器。</p>
 
 <p>注意: Benchmark tag 並沒有被快取下來，所以當快取功能啟動的時候，你還是可以看到頁面載入的速度。</p>
 
@@ -81,7 +81,7 @@
 
 
 <p class="important"><strong>警告:</strong> CodeIgniter 採用的是輸出後，才會儲存內容的設計方式，也就是快取(Caching)只會在你的控制器(controller)要求<a href="./views.html">檢視(view)</a>的時候，它才會被建立出來。</p>
-<p class="important"><strong>注意:</strong> 為了讓快取檔案可以被寫入到 <dfn>system/cache</dfn>，請務必將該開啟該目錄可以被寫入的權限。</p>
+<p class="important"><strong>注意:</strong> 為了讓快取檔案可以被寫入到 <dfn>application/cache</dfn>，請務必將該開啟該目錄可以被寫入的權限。</p>
 
 <h2>刪除快取</h2>
 
