--- a/helpers/html_helper.html
+++ b/helpers/html_helper.html
@@ -83,8 +83,8 @@ HTML 輔助函數
 // 產生 &lt;img src=&quot;http://site.com/images/picture.jpg&quot; /&gt;</code>
 <p>第二個參數可以不用設定，如需設定，其值可為 TRUE/FALSE，此參數是用來決定 img 路徑中是否包含 $config['index_page'] 所定義的網址。一般來說，在媒體播放的時候就會需要此參數。</p>
 <p><code>echo img('images/picture.jpg'，TRUE);<br />
-// 產生 &lt;img src=&quot;http://site.com/index.php/images/picture.jpg&quot; /&gt;</code></p>
-<p>此外，您也以設定相關陣列參數來傳入 img() 函數中，用來實做屬性跟其值的對應。</p>
+// 產生 &lt;img src=&quot;http://site.com/index.php/images/picture.jpg&quot; alt=&quot;&quot; /&gt;</code></p>
+<p>Additionally, an associative array can be passed to the img() function for complete control over all attributes and values. If an alt attribute is not provided, CodeIgniter will generate an empty string.</p>
 <p><code> $image_properties = array(<br />
 	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;'src' =&gt; 'images/picture.jpg',<br />
 	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;'alt' =&gt; 'Me，demonstrating how to eat 4 slices of pizza at one time',<br />
@@ -105,7 +105,7 @@ echo link_tag('css/mystyles.css');<br />
 
 <code>
 	echo link_tag('favicon.ico'，'shortcut icon'，'image/ico');<br />
-	// &lt;link href=&quot;http://site.com/favicon.ico&quot; rel=&quot;shortcut icon&quot; type=&quot;image/ico&quot; /&gt; 
+	// &lt;link href=&quot;http://site.com/favicon.ico&quot; rel=&quot;shortcut icon&quot; type=&quot;image/ico&quot; /&gt;
 	<br />
 	<br />
 	echo link_tag('feed'，'alternate'，'application/rss+xml'，'My RSS Feed');<br />
@@ -121,7 +121,7 @@ echo link_tag('css/mystyles.css');<br />
 	<br />
 	echo link_tag($link);<br />
 	// &lt;link href=&quot;http://site.com/css/printer.css&quot; rel=&quot;stylesheet&quot; type=&quot;text/css&quot; media=&quot;print&quot; /&gt;</code></p>
-	
+
 <h2>nbs()</h2>
 <p>根據所自訂的數量來產生非斷行空白(&amp;nbsp;). 參考範例:</p>
 <code>echo nbs(3);</code>
