--- a/helpers/smiley_helper.html
+++ b/helpers/smiley_helper.html
@@ -91,7 +91,7 @@ a publicly accessible place on your server.  This helper also assumes you have t
 
 <p>In your <dfn>application/controllers/</dfn> folder，create a file called <kbd>smileys.php</kbd> and place the code below in it.</p>
 
-<p><strong>非常重要:</strong> Change the URL in the <dfn>get_clickable_smileys()</dfn> function below so that it points to 
+<p><strong>非常重要:</strong> Change the URL in the <dfn>get_clickable_smileys()</dfn> function below so that it points to
 your <dfn>smiley</dfn> folder.</p>
 
 <p>You'll notice that in addition to the smiley helper we are using the <a href="../libraries/table.html">Table Class</a>.</p>
@@ -99,27 +99,27 @@ your <dfn>smiley</dfn> folder.</p>
 <textarea class="textarea" style="width:100%" cols="50" rows="25">
 &lt;?php
 
-class Smileys extends Controller {
+class Smileys extends CI_Controller {
 
 	function Smileys()
 	{
-		parent:Controller();
+		parent:__construct();
 	}
-	
+
 	function index()
 	{
 		$this->load->helper('smiley');
 		$this->load->library('table');
-		
+
 		$image_array = get_clickable_smileys('http://example.com/images/smileys/');
 
 		$col_array = $this->table->make_columns($image_array，8);		
-			
+
 		$data['smiley_table'] = $this->table->generate($col_array);
-		
+
 		$this->load->view('smiley_view'，$data);
 	}
-	
+
 }
 ?&gt;
 </textarea>
