--- a/helpers/url_helper.html
+++ b/helpers/url_helper.html
@@ -130,9 +130,9 @@ echo site_url($segments);</code>
 
 <p>以下是一些例子:</p>
 
-<code>echo anchor('news/local/123', 'My News');</code>
+<code>echo anchor('news/local/123', 'My News', 'title="News title"');</code>
 
-<p>輸出: &lt;a href="http://example.com/index.php/news/local/123" title="My News">My News&lt;/a></p>
+<p>輸出: &lt;a href="http://example.com/index.php/news/local/123" title="News title">My News&lt;/a></p>
 
 <code>echo anchor('news/local/123', 'My News', array('title' => 'The best news!'));</code>
 
@@ -226,7 +226,7 @@ $url_title = url_title($title, 'underscore',TRUE);<br />
 </code>
 
 <h3>prep_url()</h3>
-<p>這個函數可以附加上<kbd>http://</kbd>在沒有http://的URL中，將URL字串傳遞給函數：</p>
+<p>這個函數可以附加上<kbd>http://</kbd>在沒有http://的URL中，將 URL 字串傳遞給函數：</p>
 <code>
 $url = "example.com";<br /><br />
 $url = prep_url($url);</code>
@@ -236,7 +236,8 @@ $url = prep_url($url);</code>
 
 <h2>redirect()</h2>
 
-<p>執行一個利用header頭檔指定跳轉到本地網址URL的操作。和該類輔助函數的其他函數一樣，它用於重新導向到你網站的一個網址URL。你<strong>不能</strong>指定一個完整網址URL，而只能指向你所需的一個控制器(controller)。該函數將自動根據你的設置檔(config file)來幫你構建完整網址URL。</p>
+<p>Does a "header redirect" to the URI specified. If you specify the full site URL that link will be build, but for local links simply providing the URI segments
+to the controller you want to direct to will create the link. The function will build the URL based on your config file values.</p>
 
 <p>你可以設定第二個參數為 location 定位操作(預設)或者 refresh 刷新操作。定位操作比刷新操作執行速度快，但是在Windows伺服器上它將有時被認為是一個錯誤操作。可選擇的第三個參數允許你送一則具體的HTTP 回應代碼 - 這可能使用在例如建立301把目的重新導向給搜索引擎。預設回應代碼是302。第三個參數<em>只有</em>'位址'可提供更改方向，而不'刷新'動作。範例:</p>
 
