--- a/libraries/output.html
+++ b/libraries/output.html
@@ -87,6 +87,14 @@ For example，if you build a page in one of your controller functions，don't se
 CodeIgniter functions like <var>$this->load->view()</var>.</p>
 
 
+<h2>$this->output->append_output();</h2>
+
+<p>Appends data onto the output string.  Usage example:</p>
+
+<code>$this->output->append_output($data);</code>
+
+
+
 <h2>$this->output->set_header();</h2>
 
 <p>Permits you to manually set server headers，which the output class will send for you when outputting the final rendered display.  參考範例:</p>
@@ -122,9 +130,18 @@ at the bottom of your pages for debugging and optimization purposes.</p>
 <p>To disable the profiler you will use:</p>
 <code>$this->output->enable_profiler(FALSE);</code>
 
+<h2>$this->output->set_profiler_sections();</h2>
+
+<p>Permits you to enable/disable specific sections of the Profiler when enabled.  Please refer to the <a href="../general/profiling.html">Profiler</a> documentation for further information.</p>
 
 <h2>$this->output->cache();</h2>
 <p>The CodeIgniter output library also controls caching.  For more information，please see the <a href="../general/caching.html">caching documentation</a>.</p>
+
+<h2>Parsing Execution Variables</h2>
+
+<p>CodeIgniter will parse the pseudo-variables <var>{elapsed_time}</var> and <var>{memory_usage}</var> in your output by default.  To disable this, set the <var>$parse_exec_vars</var> class property to <var>FALSE</var> in your controller.
+
+<code>$this->output->parse_exec_vars = FALSE;</code>
 
 </div>
 <!-- END CONTENT -->
