--- a/libraries/parser.html
+++ b/libraries/parser.html
@@ -61,7 +61,7 @@ Template Parser 類別
 <h1>Template Parser 類別</h1>
 
 <p>The Template Parser 類別 enables you to parse pseudo-variables contained within your view files. It can parse simple
-variables or variable tag pairs. If you've never used a 樣板引擎(template engine)，pseudo-variables look like this:</p>
+variables or variable tag pairs. If you've never used a 樣板引擎(template engine), pseudo-variables look like this:</p>
 
 <code>&lt;html&gt;<br />
 &lt;head&gt;<br />
@@ -79,11 +79,11 @@ variables or variable tag pairs. If you've never used a 樣板引擎(template en
 &lt;/body&gt;<br />
 &lt;/html&gt;</code>
 
-<p>These variables are not actual PHP variables，but rather plain text representations that allow you to eliminate
+<p>These variables are not actual PHP variables, but rather plain text representations that allow you to eliminate
 PHP from your templates (view files).</p>
 
 <p class="important"><strong>注意:</strong> CodeIgniter does <strong>not</strong> require you to use this class
-since using pure PHP in your view pages lets them run a little faster.  However，some developers prefer to use a 樣板引擎(template engine) if
+since using pure PHP in your view pages lets them run a little faster.  However, some developers prefer to use a 樣板引擎(template engine) if
 they work with designers who they feel would find some confusion working with PHP.</p>
 
 <p><strong>Also 注意:</strong> The Template Parser 類別 is <strong>not</strong>  a
@@ -92,17 +92,17 @@ full-blown template parsing solution. We've kept it very lean on purpose in orde
 
 <h2>Initializing the 類別</h2>
 
-<p>Like most other classes in CodeIgniter，the Parser class is initialized in your controller using the <dfn>$this->load->library</dfn> function:</p>
+<p>Like most other classes in CodeIgniter, the Parser class is initialized in your controller using the <dfn>$this->load->library</dfn> function:</p>
 
 <code>$this->load->library('parser');</code>
-<p>Once loaded，the Parser library object will be available using: <dfn>$this->parser</dfn></p>
+<p>Once loaded, the Parser library object will be available using: <dfn>$this->parser</dfn></p>
 
 
 <p>The following functions are available in this library:</p>
 
 <h2>$this->parser->parse()</h2>
 
-<p>This method accepts a template name and data array as input，and it generates a parsed version.  參考範例:</p>
+<p>This method accepts a template name and data array as input, and it generates a parsed version.  參考範例:</p>
 
 <code>$this->load->library('parser');<br />
 <br />
@@ -111,23 +111,26 @@ $data = array(<br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;'blog_heading' => 'My Blog Heading'<br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;);<br />
 <br />
-$this->parser->parse('blog_template'，$data);</code>
+$this->parser->parse('blog_template', $data);</code>
 
 <p>The first parameter contains the name of the <a href="../general/views.html">view file</a> (in this example the file would be called blog_template.php),
-and the second parameter contains an associative array of data to be replaced in the template.  In the above example，the
+and the second parameter contains an associative array of data to be replaced in the template.  In the above example, the
 template would contain two variables: {blog_title} and {blog_heading}</p>
 
 <p>There is no need to "echo" or do something with the data returned by <dfn>$this->parser->parse()</dfn>.  It is automatically
-passed to the output class to be sent to the browser.  However，if you do want the data returned instead of sent to the output class you can
+passed to the output class to be sent to the browser.  However, if you do want the data returned instead of sent to the output class you can
 pass TRUE (boolean) to the third parameter:</p>
 
-<code>$string = $this->parser->parse('blog_template'，$data，TRUE);</code>
+<code>$string = $this->parser->parse('blog_template', $data, TRUE);</code>
 
+<h2>$this->parser->parse_string()</h2>
+
+<p>This method works exactly like parse(), only accepts a string as the first parameter in place of a view file.</p>
 
 <h2>Variable Pairs</h2>
 
 <p>The above example code allows simple variables to be replaced.  What if you would like an entire block of variables to be
-repeated，with each iteration containing new values?  Consider the template example we showed at the top of the page:</p>
+repeated, with each iteration containing new values?  Consider the template example we showed at the top of the page:</p>
 
 <code>&lt;html&gt;<br />
 &lt;head&gt;<br />
@@ -146,11 +149,11 @@ repeated，with each iteration containing new values?  Consider the template exa
 &lt;/html&gt;</code>
 
 <p>In the above code you'll notice a pair of variables: <kbd>{blog_entries}</kbd> data... <kbd>{/blog_entries}</kbd>.
-In a case like this，the entire chunk of data between these pairs would be repeated multiple times，corresponding
+In a case like this, the entire chunk of data between these pairs would be repeated multiple times, corresponding
 to the number of rows in a result.</p>
 
 <p>Parsing variable pairs is done using the identical code shown above to parse single variables,
-except，you will add a multi-dimensional array corresponding to your variable pair data.
+except, you will add a multi-dimensional array corresponding to your variable pair data.
 Consider this 參考範例:</p>
 
 
@@ -160,17 +163,17 @@ $data = array(<br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;'blog_title'&nbsp;&nbsp; => 'My Blog Title',<br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;'blog_heading' => 'My Blog Heading',<br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;'blog_entries' => array(<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;array('title' => 'Title 1'，'body' => 'Body 1'),<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;array('title' => 'Title 2'，'body' => 'Body 2'),<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;array('title' => 'Title 3'，'body' => 'Body 3'),<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;array('title' => 'Title 4'，'body' => 'Body 4'),<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;array('title' => 'Title 5'，'body' => 'Body 5')<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;array('title' => 'Title 1', 'body' => 'Body 1'),<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;array('title' => 'Title 2', 'body' => 'Body 2'),<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;array('title' => 'Title 3', 'body' => 'Body 3'),<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;array('title' => 'Title 4', 'body' => 'Body 4'),<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;array('title' => 'Title 5', 'body' => 'Body 5')<br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;)<br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;);<br />
 <br />
-$this->parser->parse('blog_template'，$data);</code>
+$this->parser->parse('blog_template', $data);</code>
 
-<p>If your "pair" data is coming from a database result，which is already a multi-dimensional array，you can simply
+<p>If your "pair" data is coming from a database result, which is already a multi-dimensional array, you can simply
 use the database result_array() function:</p>
 
 <code>
@@ -184,7 +187,7 @@ $data = array(<br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;'blog_entries' => $query->result_array()<br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;);<br />
 <br />
-$this->parser->parse('blog_template'，$data);</code>
+$this->parser->parse('blog_template', $data);</code>
 
 
 
