--- a/libraries/uri.html
+++ b/libraries/uri.html
@@ -190,7 +190,7 @@ $str = $this->uri->assoc_to_uri($array);<br />
 <code>/news/local/345</code>
 
 
-<h2>$this->uri->ruri_string(<var>n</var>)</h2>
+<h2>$this->uri->ruri_string()</h2>
 
 <p>This function is identical to the previous one，except that it returns the
 re-routed URI in the event you are using CodeIgniter's <a href="../general/routing.html">URI Routing</a> feature.</p>
