Update all document to 2.0.1

--- a/general/errors.html
+++ b/general/errors.html
@@ -113,7 +113,7 @@ log_message('info'，'The purpose of some variable is to provide some value.');<
 </ol>
 
 
-<p class="important"><strong>注意：</strong> 為了能確實寫入log檔，"logs"目錄必須是可寫入的。此外，你必須設定寫入log的門檻(threshold)。例如，你可能只需要紀錄錯誤訊息，而非其他兩種訊息。如果你設為0，log動作會被取消。
+<p class="important"><strong>注意：</strong> 為了能確實寫入log檔，"logs"目錄必須是可寫入的。此外，你必須在 <dfn>application/config/config.php</dfn> 設定寫入log的門檻(threshold)。例如，你可能只需要紀錄錯誤訊息，而非其他兩種訊息。如果你設為0，log動作會被取消。
 </p>
 
 
