--- a/toc.html
+++ b/toc.html
@@ -113,6 +113,7 @@
 	<li><a href="./general/caching.html">快取</a></li>
 	<li><a href="./general/profiling.html">Application 效能分析</a></li>
 	<li><a href="./general/managing_apps.html">管理 Applications</a></li>
+	<li><a href="./general/environments.html">處理多個環境</a></li>
 	<li><a href="./general/alternative_php.html">變換 PHP 句法</a></li>
 	<li><a href="./general/security.html">安全性</a></li>
 	<li><a href="./general/styleguide.html">PHP 風格指南</a></li>
