Update: all document 2.0.1 -> 2.0.2

--- a/general/credits.html
+++ b/general/credits.html
@@ -59,7 +59,8 @@
 
 <p>CodeIgniter 最早是由 <a href="http://www.ellislab.com/">Rick Ellis</a> 開發的 (<a href="http://ellislab.com/">Ellislab</a> 公司的 CEO)。此框架針對效能性開發了許多物件類別函式庫及輔助函數(helpers)，以及參考 <a href="http://www.expressionengine.com/">ExpressionEngine</a> 基底開發子系統。</p>
 
-<p>CodeIgniter 目前由 ExpressionEngine 開發團隊開發並維護。</p>
+<p>CodeIgniter 目前由 ExpressionEngine 開發團隊開發並維護。<br />
+Bleeding edge development is spearheaded by the handpicked contributors of the Reactor Team.</p>
 
 <p>來自 Ruby on Rails 的靈感啟發我們創造了一個 PHP 框架，並且將框架的概念帶入到網絡世界。</p>
 
