--- a/toc.html
+++ b/toc.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
+
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>目錄: CodeIgniter 使用手冊</title>
 
@@ -112,6 +113,7 @@
 	<li><a href="./general/errors.html">錯誤處理</a></li>
 	<li><a href="./general/caching.html">快取</a></li>
 	<li><a href="./general/profiling.html">Application 效能分析</a></li>
+	<li><a href="./general/cli.html">透過指令(CLI)執行</a></li>
 	<li><a href="./general/managing_apps.html">管理 Applications</a></li>
 	<li><a href="./general/environments.html">處理多個環境</a></li>
 	<li><a href="./general/alternative_php.html">變換 PHP 句法</a></li>
