--- a/general/cli.html
+++ b/general/cli.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Handling Multiple Environments : CodeIgniter User Guide</title>
+<title>透過 CLI 執行 CodeIgniter : CodeIgniter User Guide</title>
 
 <style type='text/css' media='all'>@import url('../userguide.css');</style>
 <link rel='stylesheet' type='text/css' media='all' href='../userguide.css' />
@@ -17,7 +17,7 @@
 <meta http-equiv= 'pragma' content='no-cache' />
 <meta name='robots' content='all' />
 <meta name='author' content='ExpressionEngine Dev Team' />
-<meta name='description' content='CodeIgniter User Guide' />
+<meta name='description' content='CodeIgniter 使用手冊' />
 
 </head>
 <body>
@@ -28,7 +28,7 @@
 <div id="masthead">
 <table cellpadding="0" cellspacing="0" border="0" style="width:100%">
 <tr>
-<td><h1>CodeIgniter User Guide Version 2.0.1</h1></td>
+<td><h1>CodeIgniter 使用手冊版本 2.0.2</h1></td>
 <td id="breadcrumb_right"><a href="../toc.html">Table of Contents Page</a></td>
 </tr>
 </table>
@@ -41,8 +41,8 @@
 <tr>
 <td id="breadcrumb">
 <a href="http://www.codeigniter.org.tw/">CodeIgniter Home</a> &nbsp;&#8250;&nbsp;
-<a href="../index.html">User Guide Home</a> &nbsp;&#8250;&nbsp;
-Handling Multiple Environments
+<a href="../index.html">使用手冊首頁</a> &nbsp;&#8250;&nbsp;
+透過 CLI 執行 CodeIgniter
 </td>
 <td id="searchbox"><form method="get" action="http://www.google.com/search"><input type="hidden" name="as_sitesearch" id="as_sitesearch" value="www.codeigniter.org.tw/user_guide/" />Search User Guide&nbsp; <input type="text" class="input" style="width:200px;" name="q" id="q" size="31" maxlength="255" value="" />&nbsp;<input type="submit" class="submit" name="sa" value="Go" /></form></td>
 </tr>
@@ -55,57 +55,82 @@ Handling Multiple Environments
 <!-- START CONTENT -->
 <div id="content">
 
-<h1>Handling Multiple Environments</h1>
+<h1>Running via the CLI</h1>
 
 <p>
-    Developers often desire different system behavior depending on whether
-    an application is running in a development or production
-    environment. For example, verbose error output is something that would
-    be useful while developing an application, but it may also pose a security issue when "live".
+	As well as calling an applications <a href="./controllers.html">Controllers</a> via the URL in a browser they can also be loaded via the command-line interface (CLI).
 </p>
 
-<h2>The ENVIRONMENT Constant</h2>
+
+<ul>
+<li><a href="#what">What is the CLI?</a></li>
+<li><a href="#why">Why use this method?</a></li>
+<li><a href="#how">How does it work?</a></li>
+</ul>
+
+
+<a name="what"></a>
+<h2>What is the CLI?</h2>
+
+<p><dfn>The command-line interface is a text-based method of interacting with computers that looks like what most people remember as DOS.</dfn></p>
+
+<a name="why"></a>
+
+<h2>Why run via the command-line?</h2>
 
 <p>
-    By default, CodeIgniter comes with the environment constant set to
-    '<kbd>development</kbd>'. At the top of index.php, you will see:
-</p>
+	There are many reasons for running CodeIgniter from the command-line, but they are not always obvious.</p>
 
-<code>
-define('<var>ENVIRONMENT</var>', '<var>development</var>');
-</code>
+<ul>
+	<li>Run your cron-jobs without needing to use wget or curl</li>
+	<li>Make your cron-jobs inaccessible from being loaded in the URL by checking for <kbd>IS_CLI</kbd></li>
+	<li>Make interactive "tasks" that can do things like set permissions, prune cache folders, run backups, etc.</li>
+	<li>Integrate with other applications in other languages. For example, a random C++ script could call one command and run code in your models!</li>
+</ul>
 
-<p>
-    In addition to affecting some basic framework behavior (see the next section),
-    you may use this constant in your own development to differentiate
-    between which environment you are running in.
-</p>
+<a name="how"></a>
+<h2>Let's try it:&nbsp; Hello World!</h2>
 
-<h2>Effects On Default Framework Behavior</h2>
+<p>Let's create a simple controller so you can see it in action. Using your text editor, create a file called <dfn>tools.php</dfn>, and put the following code in it:</p>
 
-<p>
-    There are some places in the CodeIgniter system where the <kbd>ENVIRONMENT</kbd>
-    constant is used. This section describes how default framework behavior is
-    affected.
-</p>
+<textarea class="textarea" style="width:100%" cols="50" rows="10">
+&lt;?php
+class Tools extends CI_Controller {
 
-<h3>Error Reporting</h3>
+	public function message($to = 'World')
+	{
+		echo "Hello {$to}!".PHP_EOL;
+	}
+}
+?&gt;
+</textarea>
 
-<p>
-    Setting the <kbd>ENVIRONMENT</kbd> constant to a value of '<kbd>development</kbd>' will
-    cause all PHP errors to be rendered to the browser when they occur. Conversely,
-    setting the constant to '<kbd>production</kbd>' will disable all error output. Disabling
-    error reporting in production is a <a href="security.html">good security practice</a>.
-</p>
+<p>Then save the file to your <dfn>application/controllers/</dfn> folder.</p>
 
-<h3>Configuration Files</h3>
+<p>Now normally you would visit the your site using a URL similar to this:</p>
 
-<p>
-    Optionally, you can have CodeIgniter load environment-specific
-    configuration files. This may be useful for managing things like differing API keys
-    across multiple environments. This is described in more detail in the
-    environment section of the <a href="../libraries/config.html#environments">Config Class</a> documentation.
-</p>
+<code>example.com/index.php/<var>tools</var>/<var>message</var>/<var>to</var></code>
+
+<p>Instead, we are going to open Terminal in Mac/Lunix or go to Run > "cmd" in Windows and navigate to our CodeIgniter project.</p>
+
+<blockquote>
+	$ cd /path/to/project;<br/>
+	$ php index.php tools message
+</blockquote>
+
+<p>If you did it right, you should see <samp>Hello World!</samp>.</p>
+
+<blockquote>
+	$ php index.php tools message "John Smith"
+</blockquote>
+
+<p>Here we are passing it a argument in the same way that URL parameters work. "John Smith" is passed as a argument and output is: <samp>Hello John Smith!</samp>.</p>
+
+<h2>That's it!</h2>
+
+<p>That, in a nutshell, is all there is to know about controllers on the command line. Remember that this is just a normal controller, so routing and _remap works fine.</p>
+
+
 
 </div>
 <!-- END CONTENT -->
@@ -113,12 +138,11 @@ define('<var>ENVIRONMENT</var>', '<var>development</var>');
 
 <div id="footer">
 <p>
-Previous Topic:&nbsp;&nbsp;<a href="managing_apps.html">Managing Applications</a>
+Previous Topic:&nbsp;&nbsp;<a href="urls.html">CodeIgniter URLs</a>
 &nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="#top">Top of Page</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="../index.html">User Guide Home</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
-Next Topic:&nbsp;&nbsp;<a href="alternative_php.html">Alternative PHP Syntax</a>
-</p>
+Next Topic:&nbsp;&nbsp;<a href="reserved_names.html">Reserved Names</a></p>
 <p><a href="http://www.codeigniter.org.tw">CodeIgniter</a> &nbsp;&middot;&nbsp; Copyright &#169; 2006 - 2011 &nbsp;&middot;&nbsp; <a href="http://ellislab.com/">EllisLab, Inc.</a></p>
 </div>
 <script type="text/javascript">
