--- a/general/cli.html
+++ b/general/cli.html
@@ -55,7 +55,7 @@
 <!-- START CONTENT -->
 <div id="content">
 
-<h1>Running via the CLI</h1>
+<h1>透過 CLI 執行 CodeIgniter</h1>
 
 <p>
 	As well as calling an applications <a href="./controllers.html">Controllers</a> via the URL in a browser they can also be loaded via the command-line interface (CLI).
